2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  move import in.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	  Remove unused function.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-things-by-urgency/map.js:
	  Don't emit whole doc.

2009-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	* python/mushin/maemo/show.py:
	* python/mushin/maemo/things.py:
	* python/mushin/maemo/start.py (added):
	* python/mushin/maemo/lists.py (added):
	* python/mushin/maemo/show.py (added):
	  Add more windows.
	* python/mushin/common/app.py (added):
	  Add a Server object to handle interaction with database.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Use compat layer.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/mapping.py (added):
	  Add a temporary compatibility layer.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/extern/paisley (added):
	* python/mushin/extern/paisley/mapping.py (added):
	* python/mushin/extern/paisley/tests (added):
	* python/mushin/extern/paisley/tests/test_mapping.py (added):
	* python/mushin/extern/paisley/tests/test_views.py (added):
	* python/mushin/extern/paisley/tests/__init__.py (added):
	* python/mushin/extern/paisley/tests/test_couchdb.py (added):
	* python/mushin/extern/paisley/views.py (added):
	* python/mushin/extern/paisley/__init__.py (added):
	* python/mushin/extern/paisley/couchdb.py (added):
	  Do an import of our paisley branch.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	  Tie some windows together to get an idea of program flow.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py: