@@ -1,6 +1,8 @@
 # -*- Mode: Python -*-
 # vi:si:et:sw=4:sts=4:ts=4
 
+import datetime
+
 from mushin.extern.paisley import couchdb, views
 
 from mushin.model import couch
@@ -18,6 +20,36 @@ class Server:
     def __init__(self):
         self._couch = couchdb.CouchDB('localhost')
 
+    def _getThingsByDue(self, which, factory, include_docs=True):
+        """
+        Returns: a deferred for a generator that generates the things.
+
+        @param which: one of 'due', 'today', 'overdue'
+        """
+        now = datetime.datetime.now()
+        daystart = datetime.datetime(year=now.year, month=now.month,
+            day=now.day)
+        dayend = daystart + datetime.timedelta(days=1)
+
+        args = 'include_docs=%s' % (
+            include_docs and 'true' or 'false')
+        
+        # FIXME: due dates, and hence keys, can possibly end with Z
+        if which in ['today', 'due']:
+            args += '&startkey="%s"' % \
+                daystart.strftime('%Y-%m-%dT%H:%M:%S')
+        if which in ['today', 'overdue']:
+            args += '&endkey="%s"' % \
+                dayend.strftime('%Y-%m-%dT%H:%M:%S')
+
+        view = views.View(self._couch, 'mushin', 'mushin',
+            'open-things-due?%s' % args,
+            factory)
+
+        d = view.queryView()
+        return d
+
+
     def getThings(self):
         view = views.View(self._couch, 'mushin', 'mushin',
             'open-things-due?include_docs=true', couch.Thing)
@@ -26,7 +58,7 @@ class Server:
 
     def getThingsDue(self):
         """
-        Returns: a generator that generates the due things.
+        Returns: a deferred for a generator that generates the due things.
         """
         view = views.View(self._couch, 'mushin', 'mushin',
             'open-things-due?include_docs=true', couch.Thing)
@@ -43,3 +75,62 @@ class Server:
         d = view.queryView()
         d.addCallback(lambda r: len(list(r)))
         return d
+
+    def getThingsDue(self):
+        """
+        @returns: a deferred for a generator that generates
+                  uncompleted due (up to end of today) things
+        @rtype:   L{defer.Deferred} of generator
+        """
+        d = self._getThingsByDue('due', couch.Thing)
+        return d
+
+    def getThingsDueCount(self):
+        """
+        @returns: a deferred for a count of
+                  uncompleted due (up to end of today) things
+        @rtype:   L{defer.Deferred} of int
+        """
+        d = self._getThingsByDue('due', Count, include_docs=False)
+        d.addCallback(lambda r: len(list(r)))
+        return d
+
+
+    def getThingsOverdue(self):
+        """
+        @returns: a deferred for a generator that generates
+                  uncompleted overdue (since start of today) things
+        @rtype:   L{defer.Deferred} of generator
+        """
+        d = self._getThingsByDue('overdue', couch.Thing)
+        return d
+
+    def getThingsOverdueCount(self):
+        """
+        @returns: a deferred for a count of
+                  uncompleted overdue (since start of today) things
+        @rtype:   L{defer.Deferred} of int
+        """
+        d = self._getThingsByDue('overdue', Count, include_docs=False)
+        d.addCallback(lambda r: len(list(r)))
+        return d
+
+    def getThingsToday(self):
+        """
+        @returns: a deferred for a generator that generates
+                  uncompleted things due today
+        @rtype:   L{defer.Deferred} of generator
+        """
+        d = self._getThingsByDue('today', couch.Thing)
+        return d
+
+    def getThingsTodayCount(self):
+        """
+        @returns: a deferred for a count of
+                  uncompleted things due today
+        @rtype:   L{defer.Deferred} of int
+        """
+        d = self._getThingsByDue('today', Count, include_docs=False)
+        d.addCallback(lambda r: len(list(r)))
+        return d
+
